# protoproj

./: .gitignore  .tasks  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: Log.h  Number.h  Sdo.h  TypeName.h
lib/src/: Number.cpp
src/: main.cpp
test/: TestDemo.cpp
